--- a/static/home.html
+++ b/static/home.html
@@ -6,6 +6,8 @@ My Web Form
 <style>
 label {background-color: #cccc00;}
 </style>
+<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+<script src ="main_script1.js"></script>
 </head>
 
 <body>
@@ -36,64 +38,10 @@ Ready???
 </h4>
 <br>
 <h4><span style="background-color:#ffff66;">Total Chances:</span>
-<div id = "ctr">10</div><h4>
-<br><br>
-<form id="myForm">
-  Your Choice:<br>
-  <input type="text" name="guess"><br>
-  Hint Message:<br>
-  <input type="text" name="Hint"><br>
-  <input type="submit" value="Submit" onclick="GuessNumber()">
-  
-</form>
+<div id = "ctr">10</div><i class='em em-heartbeat'></i>
+<br></h4>
+<button id ="click" onclick="submitgame()">Click to Play</button>
 
 </body>
-<script>
-var label = document.getElementById("ctr");
-var labelvalue = label.textContent;
-var number = 0;
-var min=1; 
-var max=101;
-var guess;
-function GuessNumber()
-{
-	
-	if(labelvalue == "10")
-	{
-  
-		number =Math.floor(Math.random() * (+max - +min)) + +min;
-		var guess = document.getElementById("myForm").elements.namedItem("guess").value;
-		if(guess == number)
-		{
-			document.getElementById("Hint").value = "The guessed number is correct. You Won !!";
-		}
-		else if(guess > number)
-		{
-			document.getElementById("Hint").value = "The number is less than what you guessed. Guess Again !!";
-		}
-		else
-		{
-			document.getElementById("Hint").value = "The number is greater than what you guessed. Guess Again !!";
-		}
-		label.value = (parseInt(labelvalue,10) - 1).toString();
-	}
-	else
-	{
-		var guess = document.getElementById("myForm").elements.namedItem("guess").value;
-		if(guess == number)
-		{
-			document.getElementById("Hint").value = "The guessed number is correct. You Won !!";
-		}
-		else if(guess > number)
-		{
-			document.getElementById("Hint").value = "The number is less than what you guessed. Guess Again !!";
-		}
-		else
-		{
-			document.getElementById("Hint").value = "The number is greater than what you guessed. Guess Again !!";
-		}
-		label.value = (parseInt(labelvalue,10) - 1).toString();
-	}
-}
-</script>
+
 </html>
